Fix FAQ questions

--- a/index.html
+++ b/index.html
@@ -253,11 +253,11 @@
               <div class="accordion-group">
                 <div class="accordion-heading">
                   <a class="accordion-toggle" data-toggle="collapse"
-                     data-parent="#accordion2" href="#collapseOne">
+                     data-parent="#accordion2" href="#collapseTwo">
                     How long with the battery last between charges?
                   </a>
                 </div>
-                <div id="collapseOne" class="accordion-body collapse">
+                <div id="collapseTwo" class="accordion-body collapse">
                   <div class="accordion-inner">
                     The battery will last between 4-6 hours depending
                     on processor and wireless usage. 
@@ -267,11 +267,11 @@
               <div class="accordion-group">
                 <div class="accordion-heading">
                   <a class="accordion-toggle" data-toggle="collapse"
-                     data-parent="#accordion2" href="#collapseOne">
+                     data-parent="#accordion2" href="#collapseThree">
                     Will there be an Android app?
                   </a>
                 </div>
-                <div id="collapseOne" class="accordion-body collapse">
+                <div id="collapseThree" class="accordion-body collapse">
                   <div class="accordion-inner">
                     We do plan to release an Android app at some point
                     but not for the initial launch. Join our mailing
